crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_before_equals_def_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "t#\n=3\ne\n"
---
(BeginTopLevelDecls
    (BeginAssign
        Ident=>LowerIdent@0
        InlineAssign=>OpAssign@1
        Num=>IntBase10@2
    EndAssign)
    HintExpr
    Ident=>LowerIdent@3
EndTopLevelDecls)

[=== canfmt below ===]
Assign("t", IntBase10("3"))
Ident("e")

[=== formatted below ===]

