crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_before_op_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3 # test!\n+ 4\n"
---
(BeginTopLevelDecls
    (*
        HintExpr
        Num=>IntBase10@0
        InlineBinOpPlus=>OpPlus@1
        Num=>IntBase10@2
    EndBinOpPlus)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(IntBase10("3"), Plus, IntBase10("4"))

[=== formatted below ===]

