crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_inside_empty_list_expr_formatted.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "[ # comment\n]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([])

[=== formatted below ===]

