crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__comment_with_non_ascii_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "3  # 2 × 2\n+ 4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            Num=>IntBase10@0
            InlineBinOpPlus=>OpPlus@1
            Num=>IntBase10@2
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(IntBase10("3"), Plus, IntBase10("4"))

[=== formatted below ===]

