crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__complex_apply.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc def + ghi
---
(BeginFile
    (BeginTopLevelDecls
        (*
            (*
                HintExpr
                Ident=>LowerIdent@0
                InlineApply=>LowerIdent@0
                Ident=>LowerIdent@1
            EndApply)
            InlineBinOpPlus=>OpPlus@2
            Ident=>LowerIdent@3
        EndBinOpPlus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(Apply(Ident("abc"), [Ident("def")]), Plus, Ident("ghi"))

[=== formatted below ===]

