crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__complex_binop_plus.snap
---
source: crates/compiler/parse/src/cypress.rs
description: abc + def ghi
---
(BeginTopLevelDecls
    (*
        HintExpr
        Ident=>LowerIdent@0
        InlineBinOpPlus=>OpPlus@1
        (* Ident=>LowerIdent@2 InlineApply=>LowerIdent@2 Ident=>LowerIdent@3 EndApply)
    EndBinOpPlus)
EndTopLevelDecls)

[=== canfmt below ===]
BinOp(Ident("abc"), Plus, Apply(Ident("def"), [Ident("ghi")]))

[=== formatted below ===]
abc + def ghi
