crates/compiler/parse/src/snapshots/roc_parse__cypress__tests__control_characters_in_scalar_expr.snap
---
source: crates/compiler/parse/src/cypress.rs
description: "''\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("''")

[=== formatted below ===]

